2006-11-25  Lars Clausen  <lars@raeder.dk>

	* lib/arrows.c (arrow_get_name_from_type): Function to get arrow
	names, and proper error messages when a loaded diagram has bad
	arrows.  Finally fixes bug #144394, thanks to both Pontus Pihlgren
	<pontus.pihlgren@farmbio.uu.se> and Vadim Zelenin
	<green@visoft.spb.ru> 

2006-11-24  Lars Clausen  <lars@raeder.dk>

	* samples/Metapost-Testcase.dia: A nice test case for MetaPost,
	including most basic rendering things.

	* lib/textline.[ch]: Little cache fix, and adding a function to
	get alignment widths for a TextLine.

	* lib/diagdkrenderer.c (draw_text_line): Make caching of renderer
	data for textline work, get rid of last use of _scaled_ stuff.
	
2006-11-23  Lars Clausen  <lars@raeder.dk>

	* lib/diagdkrenderer.c (draw_text_line): 
	* lib/textline.[ch]: Underlying implementation and first
	(currently commented out) attempt at use of textline renderer data
	cache.  Not debugged, but thennobody holds textline objects long
	enough to make a difference yet. 

2006-11-22  Lars Clausen  <lars@raeder.dk>

	* app/menus.c: Patch adding shortcuts for align functions, thanks
	be to jan@uos.de.

2006-11-18  Djihed Afifi  <djihed@gmail.com>
	
	* configure.in: Added Arabic Language (ar).

2006-11-16  Lars Clausen  <lars@raeder.dk>

	* lib/font.[ch] (get_layout_offsets): Start of function to adjust
	all offsets in a layout line.  Not used yet, and not debugged.
	Kept around for when we have more runs in a line.

	* lib/textline.c (text_line_adjust_layout_line): Adjusts the glyph
	sizes within a PangoLayoutLine to overcome the rounding problems
	and ensure linear scaling of fonts.  Currently only fixes the
	first run, since AFAIK that's all we can do with current text
	input anyway.

	* lib/diagdkrenderer.c (draw_text_line): Now uses
	text_line_adjust_layout_line to avoid repeating Pango digging for
	Freetype and GDK code both. Ready to merge freetype and GDK
	duplicate code.

2006-11-15  Lars Clausen  <lars@raeder.dk>
